--- a/Arbetssokande/Views/Home/Index.cshtml
+++ b/Arbetssokande/Views/Home/Index.cshtml
@@ -3,29 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>Nu är vi igång!</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    <h1>Jobbhanteraren</h1>
+    <p class="lead">Här kan du hantera dina ansökningar.</p>
+    <p><a href="Ställ lite frågor och svar.." class="btn btn-primary btn-large">Vanliga frågor &raquo;</a></p>
+    <p><a href="Skriv lite instruktioner.." class="btn btn-primary btn-large">Instruktioner &raquo;</a></p>
+    <p><a href="Länk till supportsidan" class="btn btn-primary btn-large">Support &raquo;</a></p>
 </div>
