Changed Account View to swedish

--- a/Arbetssokande/Views/Account/ExternalLoginFailure.cshtml
+++ b/Arbetssokande/Views/Account/ExternalLoginFailure.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Fel vid inloggning.";
 }
 
 <h2>@ViewBag.Title.</h2>
-<h3 class="text-error">Unsuccessful login with service.</h3>
+<h3 class="text-error">Fel vid inloggning med extern service.</h3>
