--- a/Arbetssokande/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Arbetssokande/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Arbetssokande.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registrera";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
@@ -13,9 +13,8 @@
     <hr />
     @Html.ValidationSummary(true)
     <p class="text-info">
-        You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-            Please enter a user name for this site below and click the Register button to finish
-            logging in.
+        Du har lyckats verifiera dig med <strong>@ViewBag.LoginProvider</strong>.
+            Vänligen ange ett användarnamn för denna sida och klicka registrera för att slutföra inloggning.
     </p>
     <div class="form-group">
         @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
