--- a/Arbetssokande/Views/Account/Login.cshtml
+++ b/Arbetssokande/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Arbetssokande.Models.LoginViewModel
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Logga in";
 }
 
 <h2>@ViewBag.Title.</h2>
