--- a/Arbetssokande/Views/Account/Manage.cshtml
+++ b/Arbetssokande/Views/Account/Manage.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Arbetssokande.Models;
 @using Microsoft.AspNet.Identity;
 @{
-    ViewBag.Title = "Manage Account";
+    ViewBag.Title = "Hantera konto";
 }
 
 <h2>@ViewBag.Title.</h2>
