--- a/Arbetssokande/Views/Account/_SetPasswordPartial.cshtml
+++ b/Arbetssokande/Views/Account/_SetPasswordPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Arbetssokande.Models.ManageUserViewModel
 
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Du har ingen lokal användare/lösenord för den här sidan. Lägg till ett
+    lokalt konto så att du kan logga in utan en extern service såsom facebook eller google.
 </p>
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
