--- a/Arbetssokande/Views/Account/_RemoveAccountPartial.cshtml
+++ b/Arbetssokande/Views/Account/_RemoveAccountPartial.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.Count > 0)
 {
-    <h4>Registered Logins</h4>
+    <h4>Registrerade tjänster</h4>
     <table class="table">
         <tbody>
             @foreach (var account in Model)
@@ -18,7 +18,7 @@
                             <div>
                                 @Html.Hidden("loginProvider", account.LoginProvider)
                                 @Html.Hidden("providerKey", account.ProviderKey)
-                                <input type="submit" class="btn btn-default" value="Remove" title="Ta bort detta @account.LoginProvider login fran ditt konto." />
+                                <input type="submit" class="btn btn-default" value="Ta bort" title="Ta bort detta @account.LoginProvider login fran ditt konto." />
                             </div>
                             }
                         }
